--- a/resources/js/src/assets/css/variable.scss
+++ b/resources/js/src/assets/css/variable.scss
@@ -1,10 +1,10 @@
 :root{
-    --iq-bg-dark-bg: #6d73f6;
+    --iq-bg-dark-bg: #F57C00;
     --iq-bg-light-color: #efeefd;
     --iq-bg-dark-color: #1d203f;
-    --iq-primary: #827af3;
-    --iq-primary-light: #b47af3;
-    --iq-primary-dark: #6B69D2;
+    --iq-primary: #F57C00;
+    --iq-primary-light: #FF9800;
+    --iq-primary-dark: #F57C00;
     --iq-secondary: #a09e9e;
     --iq-secondary-light: #c1c1c1;
     --iq-secondary-dark: #7d7d7d;
